# logarithmic

./: .gitignore  .pip-audit.toml  .pre-commit-config.yaml  Info.plist  Logarithmic.spec  Privacy.md  README.md  build.bat  build_mac.sh  entitlements.plist  pyproject.toml  requirements.in  requirements.txt  run.bat  run.sh
.github/workflows/: ci.yml  release.yml
Docs/: AppEncrDocs.md  Changelog.md  CodingGuidelines.md  MCP_Details.md  MCP_Quickstart.md
src/logarithmic/: __main__.py  config.py  content_controller.py  exceptions.py  file_watcher.py  fonts.py  k8s_selector_dialog.py  log_group_window.py  log_highlighter.py  log_manager.py  log_viewer_window.py  logging_config.py  main_window.py  mcp_bridge.py  mcp_server.py  settings.py  shutdown_dialog.py  version_checker.py  wildcard_watcher.py
src/logarithmic/providers/: base.py  file_provider.py  kafka_provider.py  kubernetes_provider.py  pubsub_provider.py  registry.py
tests/: conftest.py  test_config.py  test_content_controller.py  test_exceptions.py  test_file_watcher.py  test_log_manager.py  test_logging_config.py  test_mcp_bridge.py  test_settings.py  test_version_checker.py  test_window_hotkeys.py
tests/providers/: test_registry.py
