[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logarithmic"
version = "0.1.0"
description = "Cross-platform log file watcher with multi-window GUI"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.10.0",
    "watchdog>=5.0.0",
    "mcp>=1.0.0",
    "qasync>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "kubernetes>=34.1.0",
    # Note: urllib3 vulnerability (CVE decompression bombs) is transitive from kubernetes.
    # kubernetes 34.1.0 pins urllib3<2.4.0, blocking the fix (urllib3>=2.6.3).
    # This is safe for our use case: we only connect to user-configured K8s clusters.
    # Tracking: https://github.com/kubernetes-client/python/issues/2477
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "pytest-qt>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "bandit>=1.7",
    "pip-audit>=2.0",
    "pip-tools>=7.0",
    "pyinstaller>=6.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "C901",  # Function too complex (acceptable for some functions)
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["logarithmic"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/logarithmic --cov-report=term-missing --cov-fail-under=38"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "src/logarithmic/__main__.py",
    "src/logarithmic/main_window.py",
    "src/logarithmic/log_viewer_window.py",
    "src/logarithmic/log_group_window.py",
    "src/logarithmic/k8s_selector_dialog.py",
    "src/logarithmic/content_controller.py",
    "src/logarithmic/log_highlighter.py",
    "src/logarithmic/fonts.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
